generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "sqlite"
  url      = "file:./dev.db"
}

generator dbml {
  provider = "prisma-dbml-generator"
}

model Employee {
  id          Int    @id @default(autoincrement())
  name        String @unique
  rules       String
  dayMain     Day[]  @relation("ansatt")
  dayOverride Day[]  @relation("vikar")
}

model Day {
  id                 String    @id @default(cuid())
  name               String
  employee           Employee  @relation("ansatt", fields: [employeeId], references: [id])
  employeeId         Int
  overrideEmployee   Employee? @relation("vikar", fields: [overrideEmployeeId], references: [id])
  overrideEmployeeId Int?
  week               Week      @relation(fields: [weekId], references: [id])
  weekId             String
}

model Week {
  id      String @id @default(cuid())
  week    Int
  lunch   Lunch  @relation(fields: [lunchId], references: [id])
  lunchId String
  day     Day[]
}

model Lunch {
  id   String @id @default(cuid())
  week Week[]
}
