//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table Employee {
  id Int [pk, increment]
  name String [unique, not null]
  rules String [not null]
  dayMain Day [not null]
  dayOverride Day [not null]
}

Table Day {
  id String [pk]
  name String [not null]
  employee Employee [not null]
  employeeId Int [not null]
  overrideEmployee Employee
  overrideEmployeeId Int
  week Week [not null]
  weekId String [not null]
}

Table Week {
  id String [pk]
  week Int [not null]
  lunch Lunch [not null]
  lunchId String [not null]
  day Day [not null]
}

Table Lunch {
  id String [pk]
  week Week [not null]
}

Ref: Day.employeeId > Employee.id

Ref: Day.overrideEmployeeId > Employee.id

Ref: Day.weekId > Week.id

Ref: Week.lunchId > Lunch.id